minor changes dark mode issue fixed for score section

--- a/src/pages/Leads/styles/style.module.scss
+++ b/src/pages/Leads/styles/style.module.scss
@@ -313,7 +313,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #ffffff;
+  background: v.$primary-table-bg;
 }
 
 .score-gauge {
